modules/gdscript/tests/scripts/runtime/errors/for_key_value_incompatible_types.gd
func test():
    for u, v: Array in { 1: 1, 2: 2 }:
        prints(u, v)
